alteração na responsividade

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="title-project">
             <p>Gerador de Paleta de Cores</p>
         </div>
+    <div class="cores">
         <div class="colors" id="color-1">
             <p id="txt-color-1">#FFFFFF</p>
         </div>
@@ -27,8 +28,10 @@
         <div class="colors" id="color-5">
             <p id="txt-color-5">#FFFFFF</p>
         </div>
-
-        <input class="btn" type="button" value="MUDAR COR" id="btn-action">
+    </div>
+    <div class="btn"> 
+        <input type="button" value="MUDAR COR" id="btn-action">
+    </div>
     </main>
         <script src="main.js"></script>
 </body>
